tests/expectations/compiler/function/17_inputs_fail.out
Error [ETYC0372168]: The transition `bar` has 17 input parameters, which exceeds the allowed limit of 16.
    --> compiler-test:3:8
     |
   3 |     fn bar(
     |        ^^^
     |
     = Consider reducing the number of input parameters. You might combine some parameters into a struct or refactor the {variant} to simplify its signature.
Error [ETYC0372168]: The async transition `baz` has 17 input parameters, which exceeds the allowed limit of 16.
    --> compiler-test:11:8
     |
  11 |     fn baz(
     |        ^^^
     |
     = Consider reducing the number of input parameters. You might combine some parameters into a struct or refactor the {variant} to simplify its signature.
Error [ETYC0372168]: The async function `baz_finalize` has 17 input parameters, which exceeds the allowed limit of 16.
    --> compiler-test:20:12
     |
  20 | onchain fn baz_finalize(
     |            ^^^^^^^^^^^^
     |
     = Consider reducing the number of input parameters. You might combine some parameters into a struct or refactor the {variant} to simplify its signature.
Error [ETYC0372168]: The function `foo` has 17 input parameters, which exceeds the allowed limit of 16.
    --> compiler-test:27:4
     |
  27 | fn foo(
     |    ^^^
     |
     = Consider reducing the number of input parameters. You might combine some parameters into a struct or refactor the {variant} to simplify its signature.
